2011-08-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp75/init.c, sp75/sp75.doc, sp75/sp75.scn: Correct test and
	supporting documentation.

2011-07-28	Pawel Zagorski <pzagor@agh.edu.pl>

	PR 1857/tests
	* Makefile.am, configure.ac: Add test where there is more than one
	thread at a priority with the executing thread being non-preemptive.
	* sp76/.cvsignore, sp76/Makefile.am, sp76/init.c, sp76/sp76.doc,
	sp76/sp76.scn: New files.

2011-07-28	Petr Benes <benesp16@fel.cvut.cz>

	PR 1858/testing
	* sp74/sp74.doc: Fix after changes.

2011-07-27	Petr Benes <benesp16@fel.cvut.cz>

	PR 1854/cpukit
	* sprbtree01/init.c, sprbtree01/sprbtree01.scn: Add test of the
	rtems_rbtree_extract() to improve test coverage.

2011-07-26	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* Makefile.am, configure.ac: New test to get coverage of core mutex
	obtain while in ISR or other dispatch disabled critical section but
	no wait.
	* sp75/.cvsignore, sp75/Makefile.am, sp75/init.c, sp75/sp75.doc,
	sp75/sp75.scn: New files.

2011-07-26	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* sp74/init.c, sp74/sp74.scn: Fix to get the case hit per coverage
	reports.

2011-07-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp74/init.c: Does not need clock driver.

2011-07-26	Pawel Zagorski <pzagor@agh.edu.pl>

	PR 1853/tests
	* Makefile.am, configure.ac: Add test for case where a thread is
	non-preemptive, multiple threads are ready at that priority, a higher
	priority thread is heir and the thread yields.
	* sp74/.cvsignore, sp74/Makefile.am, sp74/init.c, sp74/sp74.doc,
	sp74/sp74.scn: New files.

2011-07-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp04/tswitch.c, sp07/task1.c, sp07/task2.c, sp09/screen07.c,
	sp11/task1.c, sp11/task2.c, sp12/pridrv.c, sp12/pritask.c,
	sp13/task1.c, sp14/asr.c, sp14/task1.c, sp19/first.c, sp19/fptask.c,
	sp19/inttest.h, sp19/task1.c, sp20/task1.c, sp25/task1.c,
	sp26/task1.c, sp28/init.c, sp29/init.c, sp31/task1.c, sp32/init.c,