@@ -17,6 +17,11 @@ INIT - Verify rtems_rbtree_get_max with 100 nodes value [99,0]
 INIT - Removing 100 nodes
 INIT - Verify rtems_rbtree_get_max with 100 nodes value [0,99]
 INIT - Verify rtems_rbtree_find
+INIT - Verify rtems_rbtree_predecessor/successor
 INIT - Verify rtems_rbtree_find_header
+INIT - Removing 100 nodes
+INIT - Insert 20 random numbers
+INIT - Removing 20 nodes
+INIT - Verify rtems_rbtree_initialize with 100 nodes value [0,99]
 INIT - Removing 100 nodes
 *** END OF RTEMS RBTREE API TEST ***
